--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,22 +13,22 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112699.md#1" title="【直播】5·15川普在总统表彰仪式上讲话""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/download-65-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106752.md#1" title="【最新疫情5·15】川普：有无疫苗都要重启""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1225064279-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://carc2844.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114949.md#1">侨委会启动“海外信用保证基金”纾困方案</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114760.md#1">纳瓦罗谈家乡：如此封锁 加州恐由蓝变红</a><br>
-:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114866.md#1">库德洛：美中贸易协议仍有效</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114792.md#1">“人命关天” 美议员提案不许假信息驱动世卫</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114594.md#1">【全球疫情直击】军校数据 :中国至少64万确诊</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114641.md#1">山西省前地矿厅长、晋中市委书记李永宏落马</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114930.md#1">违反隔离令  纽约游客夏威夷被捕</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114949.md#1">侨委会启动“海外信用保证基金”纾困方案</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114760.md#1">纳瓦罗谈家乡：如此封锁 加州恐由蓝变红</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114866.md#1">库德洛：美中贸易协议仍有效</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114792.md#1">“人命关天” 美议员提案不许假信息驱动世卫</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114594.md#1">【全球疫情直击】军校数据 :中国至少64万确诊</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109049.md#1">网曝习近平讲话：中共内部有“反习集团”</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110735.md#1">【翻墙必看】女预言家：2020年大决战</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110474.md#1">【一线采访】舒兰浴池爆确诊 当局恐慌</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104916.md#1">习与安倍不通话 日中关系微妙且尴尬</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110725.md#1">遭“文革式批判” 作家方方要求官员公开道歉</a><br>
+<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110605.md#1">美媒记者体验4地隔离检疫 赞台湾令人惊艳</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111929.md#1">习近平视察山西前 北京卫戍区司令员被削职</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112938.md#1">赚外汇能力快速下滑 中国资金外逃加速</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109191.md#1">对北京失望 川普：签协议时中共已知疫情爆发</a><br>
-<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110605.md#1">美媒记者体验4地隔离检疫 赞台湾令人惊艳</a><br>
 <br><p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113049.md#1">【新闻看点】弗林案峰回路转 美政坛最大丑闻？</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113236.md#1">周晓辉：川普反击开弓 北京难承重负</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 356,214,403 人
+!共 356,214,781 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
