--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,10 +13,10 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112699.md#1" title="【直播】5·15川普在总统表彰仪式上讲话""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/download-65-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106752.md#1" title="【最新疫情5·15】川普：有无疫苗都要重启""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1225064279-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://carc2844.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114930.md#1">违反隔离令  纽约游客夏威夷被捕</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114949.md#1">侨委会启动“海外信用保证基金”纾困方案</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114930.md#1">违反隔离令  纽约游客夏威夷被捕</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114949.md#1">侨委会启动“海外信用保证基金”纾困方案</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114760.md#1">纳瓦罗谈家乡：如此封锁 加州恐由蓝变红</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114866.md#1">库德洛：美中贸易协议仍有效</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114866.md#1">库德洛：美中贸易协议仍有效</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114792.md#1">“人命关天” 美议员提案不许假信息驱动世卫</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114594.md#1">【全球疫情直击】军校数据 :中国至少64万确诊</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
