--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/10/n12096986.md#1" target="_blank">《共产主义黑皮书》：灾难的蔓延</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/10/n12096986.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/12/dcbb5ad1ea37934a168afd29d68d142e-150x120.jpg" align ="left"></a>这场灾难的原因是相当技术性的。在毛泽东的支持下，拒绝遗传学的苏联学者特罗菲姆．李森科（Trofim Lysenko）所倡导的一些农业方法，在中国很能博取人的欢心。他们被强加给农民，结果是灾难性的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 4:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104496.md#1" target="_blank">书僮：中共诡秘启动武汉全市核酸筛查的背后</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104496.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/2020-05-04_19-44-11-150x120.jpg" align ="left"></a>中共全国两会将在5月下旬召开，在离两会召开还有不到两周的时间点上，5月11日，武汉中共肺炎疫情防控指挥部涉疫大数据与流行病学调查组下发《关于开展全市新冠病毒核酸筛查的紧急通知》，通知要求全市各区开展“十天大会战”，对本辖区进行全员核酸筛查，并要求各区将具体实施计划于5月12日12点前上交。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 3:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104585.md#1" target="_blank">钟原：中共隐瞒武汉肺炎疫情大事记（二）</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104585.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1201428166-600x400-150x120.jpg" align ="left"></a>一场瘟疫浩劫，让武汉人、湖北人、中国人遭难，也让全世界遭难。中共隐瞒疫情，致使多少生灵涂炭！越来越多的人看清了事实。中共还在继续隐瞒，但更多的事实不断公开，媒体、各国机构、勇敢的爆料人，正在揭示这场史无前例的人祸。这里仅整理记录了部分已知的真相，并将继续补充新的真相，要把这惨烈的真相，传递给每一个人，传递给子孙后代。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 3:29 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12103891.md#1" target="_blank">李明洋：解读蓬佩奥为何让中共如此嫉恨</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12103891.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-1210655095-150x120.jpg" align ="left"></a>“露出了最狰狞的面目”、“人类公敌”、“突破做人底线”......只看这些名词，还以为是说哪个十恶不赦的恐怖份子或毫无人性的罪犯，可这却是中共最高级别媒体新华社、人民日报、央视新闻联播等最近给美国国务卿蓬佩奥扣上的一顶顶帽子。令人瞠目的用词、连续多日“高规格”的密集批判引起了国际的关注，蓬佩奥也不期然地成了最近舆论的焦.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 3:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12108499.md#1" target="_blank">【名家专栏】学校就是学校 不该沦为“监狱”</a><br></h3>作为大瘟疫限制令陆续放宽的一部分，加拿大魁北克将是第一个重新开放学校的省份。除该省最大城市蒙特利尔以外的中小学生将于5月11日重返校园，而蒙市学校则于5月25日开课。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月15日 5:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109333.md#1" target="_blank">夏林：“党前浪”给后浪留下什么遗产？</a><br></h3>中共的大外宣大内宣真的很厉害，最近出了一个《后浪》的演讲短片，一个代表“党前浪”的明星充满激情朗诵，名曰 “献给新一代的演讲”，很有大麻的嗨劲。
 
 明星的开篇是：“我看着你们，满怀羡慕，人类积攒了几千年的财富，所有的知识、见识、智慧和艺术，像是专门为你们准备的礼物”。
