--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,9 +13,9 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113285.md#1" title="促美上市中企遵从监管 川普或祭行政令""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-928690844-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113219.md#1" title="武汉“十天会战”全民测核酸 外界多质疑""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1213060777-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://carc2844.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114951.md#1">中共前军官：高级军官不政治站队 都在观望</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115006.md#1">湖南退役士官反强拆被拘留 决意抗争到底</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114930.md#1">违反隔离令  纽约游客夏威夷被捕</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114951.md#1">中共前军官：高级军官不政治站队 都在观望</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115006.md#1">湖南退役士官反强拆被拘留 决意抗争到底</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114930.md#1">违反隔离令  纽约游客夏威夷被捕</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114949.md#1">侨委会启动“海外信用保证基金”纾困方案</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114760.md#1">纳瓦罗谈家乡：如此封锁 加州恐由蓝变红</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114866.md#1">库德洛：美中贸易协议仍有效</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 356,215,090 人
+!共 356,214,801 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
