--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/carc2844/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/carc2844/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/carc2844/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=zcox2XJAms574" rel="nofollow">大纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=D8Ax1TtAnol74" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wf4N4cAnik9Rs0" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Sp8g2msSlexkp0" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oTQid61TrHh44" rel="nofollow">看中国</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=tOA2cZR4kmZ74" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Nug07FB5h2d64" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=C9gN1Qpkmpp74" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115006.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/7c784c2c0a2c6a574ce9956a5bcb1f8e-320x200.jpeg"><p align="center">湖南退役士官反强拆被拘留 决意抗争到底</p></a>
-<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115006.md#1" title="湖南退役士官反强拆被拘留 决意抗争到底""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/7c784c2c0a2c6a574ce9956a5bcb1f8e-320x200.jpeg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115006.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/60de9f79062f2107fc7b7a7c878cd8de-320x200.jpeg"><p align="center">湖南退役士官反强拆被拘留 决意抗争到底</p></a>
+<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115006.md#1" title="湖南退役士官反强拆被拘留 决意抗争到底""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/60de9f79062f2107fc7b7a7c878cd8de-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114542.md#1" title="【直播】5.16疫情追踪：中国64万病资外泄""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Untitled-18-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114630.md#1" title="加国会议员通过社交媒体庆祝法轮大法日""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/JamesBezan-320x200.png">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113326.md#1" title="中共不配合疫情调查 美参众议员推法案制裁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Capitol_Building-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113285.md#1" title="促美上市中企遵从监管 川普或祭行政令""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-928690844-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113219.md#1" title="武汉“十天会战”全民测核酸 外界多质疑""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1213060777-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://carc2844.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114951.md#1">中共前军官：高级军官不政治站队 都在观望</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115006.md#1">湖南退役士官反强拆被拘留 决意抗争到底</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114930.md#1">违反隔离令  纽约游客夏威夷被捕</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114951.md#1">中共前军官：高级军官不政治站队 都在观望</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115006.md#1">湖南退役士官反强拆被拘留 决意抗争到底</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114930.md#1">违反隔离令  纽约游客夏威夷被捕</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114949.md#1">侨委会启动“海外信用保证基金”纾困方案</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114760.md#1">纳瓦罗谈家乡：如此封锁 加州恐由蓝变红</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114866.md#1">库德洛：美中贸易协议仍有效</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114866.md#1">库德洛：美中贸易协议仍有效</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110735.md#1">【翻墙必看】女预言家：2020年大决战</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110474.md#1">【一线采访】舒兰浴池爆确诊 当局恐慌</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 356,214,801 人
+!共 356,215,090 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
