--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,9 +13,9 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113248.md#1" title="中共瞒疫引发全球诉讼潮 土耳其律师递诉状""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/court_05-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113285.md#1" title="促美上市中企遵从监管 川普或祭行政令""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-928690844-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://carc2844.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115147.md#1">【现场视频】控告方方书 激起武汉女怒斥有人太坏</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114952.md#1">【现场视频】武汉集中核酸检测 市民忧交叉感染</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114982.md#1">【现场视频】吉林465医院被征为疫情定点医院</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115147.md#1">【现场视频】控告方方书 激起武汉女怒斥有人太坏</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114952.md#1">【现场视频】武汉集中核酸检测 市民忧交叉感染</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114982.md#1">【现场视频】吉林465医院被征为疫情定点医院</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12108041.md#1">中共卫健委为人传人辩解 隐瞒3事实露破绽</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12115074.md#1">涉种族灭绝罪 非洲头号通缉犯巴黎被捕</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114951.md#1">中共前军官：高级军官都在观望局势</a><br>
